added header and nav button

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,24 +2,48 @@ header {
   background-color: #512689;
   padding: 64px 0;
   text-align: center;
-
   
+  h1 {
+    margin: 0 auto 16px;
+    color: white;
+    font-size: 64px;
+    line-height: 75px;
+    font-weight: 400;
+  }
+  
+  h2 {
+    margin: 0 auto;
+    max-width: 846px;
+    color: #F8F8F8;
+    font-size: 20px;
+    line-height: 23.44px;
+    font-weight: 400;
+  }
 }
 
-h1 {
-  margin: 0 auto 16px;
-  color: white;
-  font-size: 64px;
-  line-height: 75px;
-  font-weight: 400;
+@media (max-width: 610px) {
+  header {
+    h1 {
+      font-size: 40px;
+    }
+
+    h2 {
+      font-size: 18px;
+    }
+  }
 }
 
-h2 {
-  margin: 0 auto;
-  max-width: 846px;
-  color: #F8F8F8;
-  font-size: 20px;
-  line-height: 23.44px;
-  font-weight: 400;
-}
 
+@media (max-width: 400px) {
+  header {
+    h1 {
+      font-size: 36px;
+      line-height: 42px;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      font-size: 16px;
+    }
+  }
+}
