--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -3,3 +3,15 @@
   margin: 0 auto;
   padding: 0 80px;
 }
+
+@media (max-width: 610px) {
+  .max-width {
+    padding: 0 40px;
+  }
+}
+
+@media (max-width: 400px) {
+  .max-width {
+    padding: 0 16px;
+  }
+}
