--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,7 +19,15 @@ header {
     line-height: 23.44px;
     font-weight: 400;
   }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    margin: -32px 0 -6px;
+  }
 }
+
+
 
 @media (max-width: 610px) {
   header {
@@ -44,6 +52,10 @@ header {
 
     h2 {
       font-size: 16px;
+    }
+
+    nav {
+      margin: -52px 0 -10px;
     }
   }
 }
