--- a/src/components/NavButton/NavButton.scss
+++ b/src/components/NavButton/NavButton.scss
@@ -7,6 +7,7 @@
   background: transparent;
   font-weight: 300;
   font-family: 'Roboto';
+  transition: all 0.2s ease-in;
   cursor: pointer;
 
   &:hover {
@@ -20,6 +21,10 @@
 
   &>svg {
     display: none;
+  }
+
+  &:last-child {
+    margin-left: auto;
   }
 }
 
