added handlers to form

--- a/src/pages/AuthPage/AuthPage.scss
+++ b/src/pages/AuthPage/AuthPage.scss
@@ -68,7 +68,7 @@
     &>.show-pass {
       position: absolute;
       right: 8px;
-      bottom: 8px;
+      top: 38px;
       cursor: pointer;
       transition: all ease-in 0.2s;
 
